[package]
name = "tinydb"
description = "TinyDB (or tinydb) is a small-footprint, in-memory database, designed for the Zeno editor (https://gitlab.com/zeno-src/)."
version = "0.0.0"
readme = "README.md"
authors = ["Owez <owez@scalist.net>"]
edition = "2018"
repository = "https://gitlab.com/Owez/tinydb"
license = "GPL-3.0"

[dependencies]
bincode = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
