[package]
name = "tinydb"
description = "A small-footprint, superfast database ✨"
version = "0.1.0"
repository = "https://github.com/Owez/tinydb"
license = "MIT"
readme = "README.md"
authors = ["Owez <root@ogriffiths.com>"]
edition = "2018"

[dependencies]
bincode = "1.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]
